--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -22,8 +22,9 @@ table.main__table
         td.__td = user.created_at
         td.__td = user.updated_at
         / 編集と削除のセル ======================================
-        td.__td
-          = link_to '編集', edit_admin_user_path(user), class: 'btn__bump'
+        td.__td_conbtncell
+          = link_to '編集', edit_admin_user_path(user),
+            class: 'btn__bump'
           = link_to '削除', [:admin, user], method: :delete,
             data: { confirm: "ユーザー「#{user.name}」を削除します。よろしいですか?" },
             class: 'btn__bump'
