fix: 周期表のためのリンクボタンの追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,6 +19,7 @@ html
           - if current_user
             li.__li = link_to '原料分析表', materials_path, class: 'btn__bump'
             li.__li = link_to 'about', glaze_fav_about_path, class: 'btn__bump'
+            li.__li = link_to '周期表', periodic_table_path, class: 'btn__bump'
             - if current_user.admin?
               li.__li = link_to 'ユーザー一覧', admin_users_path, class: 'btn__bump'
             li.__li = link_to 'ログアウト', logout_path, method: :delete, class: 'btn__bump'
