--- a/app/views/periodic_atoms/new.html.slim
+++ b/app/views/periodic_atoms/new.html.slim
@@ -1,33 +1,7 @@
-- if @periodic_atom.errors.present?
-  ul#error_explanation.bg-danger.text-white
-    - @periodic_atom.errors.full_messages.each do |message|
-      li = message
+/ ================================================
+/ /peiodic/new
+/ 元素の新規登録画面
+/ ================================================
 
-ul.__ul
-  - if current_user
-    / li.__li = link_to '原子の追加', new_periodic_atom_path, class: 'btn__bump'
-    / li.__li = link_to '原子の編集', edit_periodic_atom_path(periodic_atom_url), class: 'btn__bump'
-    li.__li = link_to '周期表', periodic_atoms_path, class: 'btn__bump'
-
-= form_with model: @periodic_atom, local: true do |f|
-  .form__group
-    = f.label :name, class: 'form__label'
-    = f.text_field :name,
-      class: 'form__control_tex'
-    = f.label :symbol, class: 'form__label'
-    = f.text_field :symbol,
-      class: 'form__control_tex'
-    = f.label :atomic_num, class: 'form__label'
-    = f.number_field :atomic_num,
-      class: 'form__control_tex'
-    = f.label :group, class: 'form__label'
-    = f.number_field :group,
-      class: 'form__control_tex'
-    = f.label :period, class: 'form__label'
-    = f.number_field :period,
-      class: 'form__control_tex'
-    = f.label :weight, class: 'form__label'
-    = f.number_field :weight,
-      class: 'form__control_tex'
-  / 登録ボタン
-  = f.submit nil, class: 'btn__submit'
+= render partial: 'form',
+  locals: { periodic_atom: @periodic_atom }
