--- a/app/assets/stylesheets/Object/Project/_table_periodic.scss
+++ b/app/assets/stylesheets/Object/Project/_table_periodic.scss
@@ -9,101 +9,162 @@
 // ==========================================
 // tableのためのモジュール
 // ==========================================
-.__periodic_table {
-  @extend %table;
-  @include table-frame(separate, $table-framewidth, $table-corners);
-  @include bump-depressed(ss);
-  font-size: 10px;
-  // border-collapse: separate;
-  // border-spacing: 1px;
-  border: 1px solid $color-back;
-  // // z-index: 30;
-  // @include four-corners-kadomaru($innercell-corner);
-}
 
-.__periodic_thead {
-
-  // width: 100%;
-  .__peridoc_group_num {
-    width: $table-periodic-td;
-  }
-
-  .__periodic_group {
+.__periodic {
+  &_table {
+    @extend %table;
+    @include table-frame(separate, $table-framewidth, $table-corners);
+    @include bump-depressed(ss);
     font-size: 10px;
+    border-collapse: separate;
+    border-spacing: 0.25rem;
+    border: 1px solid $color-back;
+    // // z-index: 30;
+    // @include four-corners-kadomaru($innercell-corner);
+  }
+
+  &_thead {
+    // width: 100%;
+    // .__periodic_group {
+    //   font-size: 10px;
+    // }
+  }
+
+  &_group_num {
+    width: 5.26315%;
+    @include depressed(sss);
+  }
+
+  &_row_num {
+    @include depressed(sss);
+  }
+
+  &_td {
+    padding: 0;
+    @include bump(sss);
+    // @extend %btn-action;
+    position: relative;
+    width: 5.26315%;
+    border-radius: 50%;
+    text-align: center;
+    // @include content-scroll;
+    // @include bump-depressed(sss);
+    // background-color: rgba($color-back, 0.3);
+    // background-color: red;
+
+    &:before {
+      content: "";
+      display: block;
+      padding-top: 50%;
+      padding-bottom: 50%;
+    }
+
+    // .atomic_nucleus {
+    //   @extend %a-action;
+    //   text-align: center;
+    //   position: absolute;
+    //   top: 50%;
+    //   left: 50%;
+    //   transform: translate(-50%, -50%);
+    //   display: block;
+    //   width: 100%;
+    //   height: 100%;
+    //   border-radius: 50%;
+    //   // padding-top: 25%;
+    //   // padding-bottom: 25%;
+    //   // background: rgb(45, 60, 83);
+    //   // background: rgba(36, 88, 165, 0.705);
+
+    //   &:hover {
+    //     background-color: $color-back-darken;
+    //     // @include hover-text(ss);
+    //     @include radiation-text(ss, $color-hover);
+    //   }
+    // }
+
+    .atomic_symbol {
+      // @extend %a-action;
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-51%, -51%);
+      color: $color-link;
+      display: block;
+      text-decoration: none;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+
+      &:hover {
+        background-color: $color-back-darken;
+        // @include hover-text(ss);
+        @include radiation-text(ss, $color-hover);
+      }
+    }
+  }
+
+  &_spacecell {
+    padding: 0;
+    position: relative;
+    // vertical-align: middle;
+    width: 5.26315%;
   }
 }
 
-.__periodic_td {
-  padding: 0;
-  position: relative;
-  width: $table-periodic-td;
-  height: $table-periodic-td;
-  text-align: center;
-  // @include bump-depressed(sss);
+// .elect {
+//   &_shell_k {
+//     position: absolute;
+//     @include elect_shell($shell-k);
+//   }
 
-}
+//   &_shell_l {
+//     position: absolute;
+//     @include elect_shell($shell-l);
+//   }
 
-.atomic_nucleus {
-  text-align: center;
-  // vertical-align: middle;
-  line-height: $table-periodic-td;
-  font-size: 10px;
-  position: absolute;
-  // z-index: 30;
-  width: $table-periodic-td;
-  height: $table-periodic-td;
-  top: 0;
-  border-radius: $table-periodic-td / 2;
-  background: rgb(78, 83, 45);
-}
+//   &_shell_m {
+//     position: absolute;
+//     @include elect_shell($shell-m);
+//   }
 
-.elect_shell_k {
-  position: absolute;
-  @include elect_shell($shell-k);
-}
+//   &_shell_n {
+//     position: absolute;
+//     @include elect_shell($shell-n);
+//   }
 
-.elect_shell_l {
-  position: absolute;
-  @include elect_shell($shell-l);
-}
+//   &_shell_o {
+//     position: absolute;
+//     @include elect_shell($shell-o);
+//   }
 
-.elect_shell_m {
-  position: absolute;
-  @include elect_shell($shell-m);
-}
+//   &_shell_p {
+//     position: absolute;
+//     @include elect_shell($shell-p);
+//   }
 
-.elect_shell_n {
-  position: absolute;
-  @include elect_shell($shell-n);
-}
+//   &_shell_q {
+//     position: absolute;
+//     @include elect_shell($shell-q);
+//   }
 
-.elect_shell_o {
-  position: absolute;
-  @include elect_shell($shell-o);
-}
+//   &_config {
+//     position: absolute;
+//     // z-index: 40;
+//     width: 2px;
+//     height: 2px;
+//     border-radius: 50%;
+//     background: $color-font;
+//     top: 50% - 2;
+//     left: 25% + 6;
+//   }
 
-.elect_shell_p {
-  position: absolute;
-  @include elect_shell($shell-p);
-}
+// }
 
-.elect_shell_q {
-  position: absolute;
-  @include elect_shell($shell-q);
-}
 
-.elect_config {
-  position: absolute;
-  // z-index: 40;
-  width: 2px;
-  height: 2px;
-  border-radius: 50%;
-  background: $color-font;
-  top: 50% - 2;
-  left: 25% + 6;
-}
 
 ._periodic_header {
-  background: rgb(156, 74, 74);
-  width: 50px;
+  @include depressed(sss);
+  // background: rgb(156, 74, 74);
+  width: 20px;
 }
