--- a/app/assets/stylesheets/Foundation/_structure.scss
+++ b/app/assets/stylesheets/Foundation/_structure.scss
@@ -36,7 +36,7 @@ html {
     // レイアウト系
     @include flexcontainer(column);
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     background-color: $color-back;
 
